--- a/front/switch-manager-react/public/locales/en/translation.json
+++ b/front/switch-manager-react/public/locales/en/translation.json
@@ -25,16 +25,32 @@
         "port": "port",
         "toggleDate": "scheduled automatic change",
         "lat": "latitude",
-        "lng": "longitude"
+        "lng": "longitude",
+        "errors": {
+          "ppp": "ppp is required",
+          "port": "port is required",
+          "lat": "latitude is required",
+          "lng": "longitude is required"
+        }
       },
       "customer": {
         "title": "customer details",
         "firstname": "firstname",
         "lastname": "lastname",
         "type": "type",
-        "address": "address"
+        "address": "address",
+        "errors": {
+          "firstname": "firstname is required",
+          "lastname": "lastname is required",
+          "type": "type is required",
+          "address": "address is required"
+        }
       },
-      "save": "save"
+      "errors": {
+        "general": "an error has occured"
+      },
+      "save": "save",
+      "success": "connection saved"
     }
   }
 }
