--- a/front/switch-manager-react/public/locales/he/translation.json
+++ b/front/switch-manager-react/public/locales/he/translation.json
@@ -34,7 +34,11 @@
         "type": "סוג",
         "address": "כתובת"
       },
-      "save": "שמירה"
+      "save": "שמירה",
+      "errors": {
+        "general": "an error has occured"
+      },
+      "success": "connection saved"
     }
   }
 }
