[front]: rtl and hebrew implemented

--- a/front/switch-manager-react/public/locales/he/translation.json
+++ b/front/switch-manager-react/public/locales/he/translation.json
@@ -36,9 +36,9 @@
       },
       "save": "שמירה",
       "errors": {
-        "general": "an error has occured"
+        "general": "אירעה שגיאה בשמירת החיבור"
       },
-      "success": "connection saved"
+      "success": "החיבור נשמר בהצלחה"
     }
   }
 }
