--- a/front/switch-manager-react/public/locales/he/translation.json
+++ b/front/switch-manager-react/public/locales/he/translation.json
@@ -25,7 +25,9 @@
         "port": "פחתה",
         "toggleDate": "מתוזמן לשינוי אוטומטי",
         "lat": "קו רוחב",
-        "lng": "קו גובה"
+        "lng": "קו גובה",
+        "autoUpdate": "לאפשר עדכוני אוטומטיים",
+        "restricted": "הגבל שינויים"
       },
       "customer": {
         "title": "פרטי לקוח",
