[api/front]: moved address field from customer to connection; divided form in 3 sections

--- a/front/switch-manager-react/public/locales/en/translation.json
+++ b/front/switch-manager-react/public/locales/en/translation.json
@@ -19,19 +19,22 @@
   },
   "connection": {
     "form": {
-      "technical": {
-        "title": "technical options",
+      "switch": {
+        "title": "switch",
+        "lat": "latitude",
+        "lng": "longitude",
+        "restricted": "restrict modifications"
+      },
+      "connection": {
+        "title": "connection",
         "ppp": "ppp",
         "port": "port",
         "toggleDate": "scheduled automatic change",
-        "lat": "latitude",
-        "lng": "longitude",
         "autoUpdate": "allow automatic updates",
-        "restricted": "restrict modifications",
         "address": "address"
       },
       "customer": {
-        "title": "customer details",
+        "title": "customer",
         "firstname": "firstname",
         "lastname": "lastname",
         "type": "type"
