[front/back]: added flat field to connection model and IO; added flat input to connection form and description to switch form

--- a/front/switch-manager-react/public/locales/en/translation.json
+++ b/front/switch-manager-react/public/locales/en/translation.json
@@ -23,7 +23,8 @@
         "title": "switch",
         "lat": "latitude",
         "lng": "longitude",
-        "restricted": "restrict modifications"
+        "restricted": "restrict modifications",
+        "description": "description"
       },
       "connection": {
         "title": "connection",
@@ -31,7 +32,8 @@
         "port": "port",
         "toggleDate": "scheduled automatic change",
         "autoUpdate": "allow automatic updates",
-        "address": "address"
+        "address": "address",
+        "flat": "flat"
       },
       "customer": {
         "title": "customer",
