[front]: settings translations

--- a/front/switch-manager-react/public/locales/en/translation.json
+++ b/front/switch-manager-react/public/locales/en/translation.json
@@ -17,6 +17,11 @@
       }
     }
   },
+  "settings": {
+    "title": "Settings",
+    "instructions": "select a language",
+    "continue": "continue working"
+  },
   "connection": {
     "form": {
       "switch": {
