--- a/front/switch-manager-react/public/locales/he/translation.json
+++ b/front/switch-manager-react/public/locales/he/translation.json
@@ -17,6 +17,11 @@
       }
     }
   },
+  "settings": {
+    "title": "הגדרות",
+    "instructions": "בחר שפה",
+    "continue": "להמשיך לעבוד"
+  },
   "connection": {
     "form": {
       "switch": {
