[back/front]: manual user assignement

--- a/front/switch-manager-react/public/locales/en/translation.json
+++ b/front/switch-manager-react/public/locales/en/translation.json
@@ -51,7 +51,9 @@
         "firstname": "firstname",
         "lastname": "lastname",
         "type": "type",
-        "ID": "ID"
+        "ID": "ID",
+        "unasign": "unasign",
+        "search": "search..."
       },
       "errors": {
         "general": "an error has occured"
